# MediCore

./: .env  .gitignore  DROP TABLE cityhospital_7b9e995d.sql  Dockerfile  README.md  celerybeat-schedule  docker-compose.yaml  generate_ssh_key.py  manage.py  medicore.session.sql  pyproject.toml  requirements.txt  search.sql
.devcontainer/: devcontainer.json
apps/patients/: admin.py  model_perm.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/patients/base_view/: base_patients_view.py
apps/patients/cached/: patient_search.py
apps/patients/migrations/: 0001_initial.py  0002_historicalpatientappointment_and_more.py  0002_initial.py  0002_patient_nin.py  0002_remove_patientappointment_unique_appointment_per_doctor_start_time.py  0002_remove_patientoperation_patient_ope_operati_c943c2_idx_and_more.py  0002_rename_primary_contact_historicalpatient_emergency_contact_and_more.py  0002_rename_ssn_encrypted_patient_nin_encrypted.py  0003_alter_historicalpatientoperation_notes_and_more.py  0003_patientdemographics_gender.py  0003_remove_historicalpatientappointment_color_code_and_more.py  0004_historicalpatientappointment_department_and_more.py  0004_patientdemographics_emergency_contact_name_and_more.py  0004_remove_patientappointment_patient_app_appoint_86a471_idx_and_more.py  0005_alter_historicalpatientappointment_appointment_time_and_more.py  0005_alter_historicalpatientappointment_department_and_more.py  0005_patient_pin_alter_patient_gender_alter_patient_nin_and_more.py  0006_alter_patient_pin.py  0006_rename_prescription_patientprescription_and_more.py  0007_alter_patientmedicalreport_title.py  0008_alter_patient_pin.py
apps/patients/mixins/: patients_mixins.py
apps/patients/models/: __init__.py  address.py  appointments.py  contact.py  core.py  demographics.py  diagnosis.py  dynamic_related_name.py  medical.py  operations.py  prescriptions.py  reports.py  visits.py
apps/patients/serializers/: __init__.py  appointment_serializer.py  base_serializer.py  diagnosis_serializer.py  medical_serializer.py  operation_serializer.py  patients.py  prescription_serializer.py  report_serializer.py  visit_serializer.py
apps/patients/services/: appointment_service.py  operation_service.py
apps/patients/utils/: utils.py
apps/scheduling/: endpoint.md  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/staff/: admin.py  apps.py  helper.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/staffdashboard/: apps.py
apps/tenants/: DELETE FROM public.sql  DROP SCHEMA IF EXISTS gh CASCADE;.sql  admin.py  models.py
base_permission/: user_create_perm.py  view_permission.py
base_view/: __init__.py  base_view.py
core/: admin.py  apps.py  authentication.py  backends.py  custom_admin.py  exceptions.py  forms.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
core/helper/: admin_perm.py
core/migrations/: 0001_initial.py  0002_initial.py  0002_remove_myuser_date_of_birth.py  0002_tenantpermission_myuser_tenant_permissions.py  0003_alter_tenantpermission_unique_together_and_more.py  0003_myuser_groups_myuser_user_permissions.py  0004_myuser_middle_name.py  0004_remove_myuser_tenant_permissions_and_more.py  0005_modelpermission.py  0006_myuser_first_name_myuser_last_name_and_more.py
hospital/: DROP SCHEMA IF EXISTS hospital1 CASCADE;.sql  admin.py  apps.py  models.py  permission_config.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
hospital/migrations/: 0001_initial.py  0002_alter_hospitalprofile_admin_user.py  0002_rename_staff_hospitalprofile_members_and_more.py  0003_alter_hospitalprofile_admin_user.py  0003_hospitalprofile_additional_staff_and_more.py  0003_hospitalprofile_hospital_code.py  0004_alter_hospitalmembership_options.py  0005_alter_hospitalprofile_hospital_code.py  0006_hospitalmembership_is_active.py
hospital/models/: __init__.py  hospital_members.py  hospital_profile.py  hospital_role.py  soft_delete.py
medicore/: admin_config.py  asgi.py  authentication.py  backends.py  celery.py  middleware.py  settings.py  tenant_modelperm.py  urls.py  wsgi.py
patients/migrations/: 0001_initial.py
scripts/: generate_keys.py
tenants/: DELETE FROM public.sql  DROP SCHEMA IF EXISTS gh CASCADE;.sql  DROP SCHEMA IF EXISTS public CASCADE;.sql  admin.py  models.py  serializers.py  signals.py
tenants/migrations/: 0001_initial.py  0002_rename_status_client_subscription_plan.py  0003_rename_subscription_plan_client_status.py
utils/: encryption.py
(+80 files in other folders)
